版本1.1 增加一个回到最前的按钮。 修改字体为等宽字体，方便对齐。

--- a/ListeningTool/Credits.html
+++ b/ListeningTool/Credits.html
@@ -8,6 +8,7 @@
 
 <ul>
 <li>cmd + o ：打开语音文件。</li>
+<li>cmd + N ：回到第一句。</li>
 <li>cmd + M ：播放当前句。</li>
 <li>cmd + , ：播放上一句。</li>
 <li>cmd + . ：播放下一句。</li>
